# fcitx-maliit

./: CMakeLists.txt  config.h.in  gconf.sh
src/: CMakeLists.txt  fcitxhost.cpp  fcitxhost.h  fcitximgraphicsview.cpp  fcitximgraphicsview.h  fcitxplugin.cpp  fcitxplugin.h  fcitxsettings.cpp  fcitxsettings.h  keyboardwidget.h  org.fcitx.Fcitx.InputContext.xml
src/qml/: meego-keyboard.qml
src/qml/assets/: CharacterKey.qml  LandscapeVKB.qml  PluginClose.qml  PluginSwitch.qml  PortraitVKB.qml
